# cima-demonstrator

./: .env.example  .gitignore  CITATION.cff  README.md  main.py  pyproject.toml  requirements-open-scenarios.txt
cima_demo/: __init__.py  branding.py  observability.py
cima_demo/api/: app.py  auth.py  budgeting.py  conversation_guard.py  dependencies.py  settings.py
cima_demo/api/routers/: chat.py  context.py  conversations.py  handoff.py  health.py  rag.py  runs.py  sources.py
cima_demo/application/: orchestrator.py  plan_executor.py  stream_manager.py
cima_demo/cognitive/: __init__.py  final_validator.py  message_builder.py  messages.py  slot_resolver.py  source_lock.py  tool_state_guard.py
cima_demo/cognitive/kernel/: __init__.py  events.py  policy.py  ports.py  readiness.py  state.py  transition.py
cima_demo/config/: phase_policy.py
cima_demo/demo/: __init__.py  contracts.py
cima_demo/demo/context/: __init__.py  evidence_marker_registry.py  service.py
cima_demo/demo/handoff/: __init__.py  service.py
cima_demo/demo/harness/: __init__.py  acceptance.py  acceptance_package.py  conformance_matrix.py  datasets.py  evidence_book.py  fakes.py  final_handoff.py  release_candidate.py  report_builder.py  scenario_runner.py
cima_demo/demo/lifecycle/: __init__.py  service.py
cima_demo/demo/lineage/: __init__.py  service.py  witness_resolver.py
cima_demo/demo/open_scenarios/: catalog.py  download.py  execute.py  external_casegen.py  external_sources.py  models.py  normalize.py
cima_demo/demo/publication/: __init__.py  audit.py
cima_demo/demo/runtime/: __init__.py  c3_sanitize.py  controller.py  journal.py  prompt_trace.py
cima_demo/domain/: entities.py  errors.py  operations.py  ports.py  value_objects.py
cima_demo/geometry/: __init__.py  boundary.py  projector.py  service.py  service_main.py  worker.py
cima_demo/infrastructure/aliases/: adapter.py
cima_demo/infrastructure/embedding/: tei.py
cima_demo/infrastructure/events/: direct.py  domain_bus.py  kafka_bus.py
cima_demo/infrastructure/files/: chunker.py  processor.py
cima_demo/infrastructure/llm/: llamacpp.py  openai_chat.py
cima_demo/infrastructure/nli/: tei.py
cima_demo/infrastructure/postgres/: migrations.py  postgres.py
cima_demo/infrastructure/qdrant/: __init__.py  catalog.py  expander.py  setup.py  (+2 more)
cima_demo/memory/: lifecycle.py  service.py  summary.py
cima_demo/retrieval/: context_builder.py  multi_hop.py  orchestrator.py  query_planner.py
cima_demo/templates/: system_prompt.j2
cima_demo/tools/: __init__.py  registry.py
cima_demo/witness_backend/: __init__.py  consumer_effect.py  ephemeral.py  ephemeral_runtime.py  events.py  gc_worker_main.py  global_memory.py  global_worker_main.py  hard_delete.py  lifecycle_guard.py  maintenance.py  outbox.py  outbox_store.py  projector_consumer.py  projector_main.py  publisher.py  publisher_main.py  semantic_pipeline.py  semantic_worker_main.py  source_ingest.py  source_worker_main.py  sql.py  summary_pipeline.py  summary_worker_main.py  topic_catalog.py
cima_demo/workers/: forget_worker.py  workspace_cleaner.py
doc/witness_backend_v1_1/: logical_ddl_v1.sql
docs/publication/: cima_claim_ledger.md  cima_coverage_matrix.md  cima_publication_status.md
scripts/: broad_launch.sh  run_demo.sh
tests/api/: test_cima_v1_compat.py  test_demo_mode_streams.py  test_nonstream.py  test_public_identity_prompt.py  test_rag_adapter_compat.py  test_standalone_runtime.py
tests/application/: test_context_builder_summary_resolution.py  test_memory_service.py  test_plan_executor.py  test_retrieval.py
tests/cognitive/: test_transition_policy.py
tests/demo/: test_acceptance_package.py  test_conformance_matrix.py  test_ephemeral_runtime_path.py  test_evidence_book.py  test_evidence_book_r3_2_r3_4.py  test_evidence_book_r3_5_r3_6.py  test_evidence_marker_registry.py  test_external_case_mechanism.py  test_final_handoff.py  test_gc_audit.py  test_geometry_and_handoff.py  test_harness_runner.py  test_lineage_and_context.py  test_open_scenarios_catalog.py  test_open_scenarios_download.py  test_open_scenarios_execute.py  test_open_scenarios_normalize_canonicalization.py  test_open_scenarios_normalize_helpers.py  test_publication_audit.py  test_release_candidate.py  test_run_journal.py  test_structured_control_loop.py
tests/domain/: test_operations.py
tests/infrastructure/: test_direct_sse_event_bus.py  test_file_processing.py  test_openai_chat_adapter.py
tests/retrieval/: test_query_planner_textual_colors.py
tests/unit/: test_llm_adapter.py
tests/witness_backend/: test_async_plane_projection.py  test_ephemeral_lifecycle.py  test_event_catalog.py  test_gc_maintenance_plane.py  test_geometry_boundary.py  test_geometry_projector.py  test_geometry_worker.py  test_global_memory_plane.py  test_hard_delete_async_plane.py  test_logical_ddl.py  test_outbox_async_plane.py  test_qdrant_collection_split.py  test_semantic_async_plane.py  test_source_async_plane.py  test_summary_async_plane.py  test_tokenizer_client.py
(+15 files in other folders)
